--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h3>index</h3>
 <li><a href="/s/README.md.html">README.md</a></li>
 <li><a href="/a">the application</a></li>
+<li><a href="/nowhere">nowhere</a></li>
